<resources>
    <string name="app_name">BookStore</string>
    <string name="login">Login</string>
    <string name="register">New User?Sign up.</string>
    <string name="reg">Register</string>
    <string name="log">Already a User?Login.</string>
    <string name="bgImage">BackGrdImage</string>
    <string name="welcome">Welcome To BookStore.</string>
    <string name="logo">Logo</string>
    <string name="EmailId">Email Id</string>
    <string name="userId">User Id</string>
    <string name="password">Password</string>
    <string name="mBookImage">book_Image</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="mBuy">Buy</string>
    <string name="mBorrow">Borrow</string>
    <string name="mCart">Add to cart</string>
    <string name="mRatings">Ratings</string>
    <string name="navigation_drawer_opened">Drawer opened</string>
    <string name="navigation_drawer_closed">Drawer closed</string>
    <string name="mBook">Books</string>
    <string name="price">Price:</string>
    <string name="address">Delivery to Address</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="facebook_app_id">1030225210679950</string>
    <string name="fb_login_protocol_scheme">fb1030225210679950</string>
    <string name="channel_name">BookStore</string>
    <string name="channel_description">New Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_order">Place Order</string>
    <string name="net_amount">Net Amount</string>
    <string name="selected_cart_items">Selected Items</string>
    <string name="goto_cart">Go to cart</string>
    <string name="quantity">Qty:</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_change_password">Change password</string>
    <string name="hint_save">save</string>
    <string name="location">location</string>
    <string name="confirm">confirm</string>
    <string name="profile_picture">profile picture</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">product description</string>
    <string name="cart_remove">remove</string>
    <string name="cart_save_for_later">save for later</string>
    <string name="cart_image">cartImage</string>

</resources>
