<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity"
    android:background="@drawable/bgimage">


    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:text="@string/welcome"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:textSize="23sp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:text="@string/reg"
        android:layout_below="@id/tvDesc"
        android:layout_alignStart="@id/tvDesc"
        android:layout_alignLeft="@id/tvDesc"
        android:textSize="23sp"
        android:textColor="@color/colorWhite"/>

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/tvLogin"
    android:layout_margin="15dp"
    android:layout_centerHorizontal="true"
    android:src="@drawable/book"
    android:contentDescription="@string/logo" />

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        card_view:contentPaddingLeft="30dp"
        card_view:contentPaddingTop="7dp"
        android:layout_height="190dp"
        android:elevation="3dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorWhite">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:paddingRight="30dp"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:textCursorDrawable="@null"
                android:textColor="#212F3D"
                android:backgroundTint="#212F3D"
                android:hint="@string/userId"
                android:autofillHints="UserId"
                tools:targetApi="o"
                android:inputType="text" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:textCursorDrawable="@null"
                android:textColor="#212F3D"
                android:backgroundTint="#212F3D"
                android:hint="@string/EmailId"
                android:autofillHints="email"
                tools:targetApi="o"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:textCursorDrawable="@null"
                android:textColor="#212F3D"
                android:backgroundTint="#212F3D"
                android:hint="@string/password"
                android:autofillHints="password"
                android:inputType="textPassword"
                tools:targetApi="o"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="@string/log"
        android:layout_below="@id/reg"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <Button
        android:id="@+id/reg"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:layout_centerHorizontal="true"
        android:text="@string/reg"
        android:textColor="@color/colorWhite"
        android:elevation="1dp"
        android:background="@drawable/my_button"
        android:layout_marginTop="-24dp"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
