<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:elevation="3dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="8dp"
        tools:targetApi="o">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/mBookImage"
                android:cropToPadding="true"
                android:paddingBottom="5dp"
                android:scaleType="centerInside" />

            <RatingBar
                android:id="@+id/rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Desc"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/bookImage"
                android:theme="@style/RatingBar" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/bookImage"
                android:padding="3dp"
                android:text="@string/heading"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/bookImage"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/description"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/cart_button"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_below="@+id/rating"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/cart_image"
                app:srcCompat="@drawable/ic_add_shopping_cart" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>