<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.BuyActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolBar"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

       <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:gravity="start"
            android:text="@string/app_name"
            android:textSize="23sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
-->
        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_account_circle_black_24dp"
            android:tint="@color/colorWhite"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp" />-->



    </androidx.appcompat.widget.Toolbar>


    
    <ImageView

        android:id="@+id/image"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerInside"
        android:layout_below="@+id/toolBar"
        android:contentDescription="@string/mBookImage">

    </ImageView>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_below="@+id/image"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/heading"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginLeft="20dp" />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="20sp"
        android:layout_below="@+id/name"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/buy"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:background="@drawable/my_button"
        android:backgroundTint="#18C22D"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:textColor="@android:color/white"
        android:text="@string/mBuy"
        android:onClick="notify"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="20dp" />

    <Button
        android:id="@+id/discard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button"
        android:backgroundTint="#57E268"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/buy"
        android:textColor="@android:color/white"
        android:text="Discard"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>
</ScrollView>