<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BorrowActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolBar"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/holo_red_dark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:gravity="start"
            android:text="@string/app_name"
            android:textSize="23sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_account_circle_black_24dp"
            android:tint="@color/colorWhite"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp" />-->



    </androidx.appcompat.widget.Toolbar>



    <ImageView
        android:layout_below="@+id/toolBar"
        android:id="@+id/img"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/mBookImage" />

    <TextView
        android:layout_below="@+id/toolBar"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/img"
        android:layout_toEndOf="@+id/img"
        android:text="@string/heading"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/borrowDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/img"
        android:layout_toEndOf="@+id/img"
        android:layout_below="@+id/name"
        android:text="Borrowing Days:"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"/>

    <Spinner
        android:id="@+id/days"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_below="@+id/borrowDay"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@+id/img"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/img" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:text="@string/address"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btBorrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginTop="30dp"
        android:text="Order"
        android:textColor="@android:color/white"
        android:background="@drawable/my_button"
        android:backgroundTint="#18C22D"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btBorrow"
        android:background="@drawable/my_button"
        android:text="Cancel"
        android:textColor="@android:color/white"
        android:backgroundTint="#57E268"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"/>

</RelativeLayout>