<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:contentDescription="@string/mBook"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_image_black_24dp"
        android:layout_marginStart="20dp"
        android:scaleType="centerCrop"
        android:tooltipText="Choose Image"
        android:layout_marginEnd="20dp" />
    <EditText
        android:id="@+id/bookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:hint="Enter Book Name"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:autofillHints="@string/mBook"
        android:inputType="text" />
    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookName"
        android:hint="Enter Description"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:autofillHints="@string/description"
        android:inputType="textMultiLine" />
    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:hint="Enter Price"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:autofillHints="@string/price"
        android:inputType="number" />

    <Button
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:background="@drawable/my_button"
        android:backgroundTint="@color/colorWhite"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upload"
        android:background="@drawable/my_button"
        android:backgroundTint="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="Cancel"
        android:textColor="@android:color/black"/>

</RelativeLayout>